--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.26.1",
     "clipboard": "^2.0.10",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.8",
     "vant": "^2.0.5",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
@@ -19,29 +20,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "vue-cli-plugin-vant": "^1.0.1",
     "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
   },
   "browserslist": [
     "> 1%",
